UtahLiveDataTest/src/objects/Review__c.object
<CustomObject>
    <description>[Business] Defines the Review object (Need more Details / Need to revisit for the Description)</description>
    <fields>
        <fullName>AcceptanceStatusComments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcceptanceStatus__c</fullName>
        <label>Do you accept your Review Assignment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Declined Without Conflict</fullName>
                </value>
                <value>
                    <fullName>Declined Due To Conflict</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ack__c</fullName>
        <label>Acknowledgement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I read the terms and agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdditionalInfoComments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AdditionalInformationNeeded__c</fullName>
        <label>Additional Information Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdministrativeCostsApproriate__c</fullName>
        <label>Administrative Costs Are Approriate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AggregatedPreScreenCommentsUSBE__c</fullName>
        <label>AggregatedPreScreenCommentsUSBE</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Agree__c</fullName>
        <label>Agree?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Grantor Step1: Prescreening form.</description>
        <label>Agreement1</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement2__c</fullName>
        <description>This field is used in Grantor Step2: SME Review form.</description>
        <label>Agreement2</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement3__c</fullName>
        <description>This field is used in Grantor Step2:SME Review of Education form.</description>
        <label>Agreement3</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmountAwarded__c</fullName>
        <description>Amount Awarded</description>
        <label>AmountAwarded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicantExternalOrganization__c</fullName>
        <formula>Application__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantHasValidFederalIDCR__c</fullName>
        <label>Applicant Has Valid Federal IDCR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <formula>Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoAssignPanelsExist__c</fullName>
        <formula>IF ( PanelApplication__r.ReviewPanel__r.ReviewStep__r.NumberofAutoAssignPanels__c &gt; 0, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Assign Panels Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AwardRecommendedComments__c</fullName>
        <label>Award Recommended Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetJustificationSubmitted__c</fullName>
        <label>Budget Justification Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetLimitNotExceededComments__c</fullName>
        <label>BudgetLimitNotExceededComments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetLimitNotExceeded__c</fullName>
        <label>Budget Limit Not Exceeded?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetPlannedCostsComments__c</fullName>
        <label>BudgetPlannedCostsComments</label>
        <length>11768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetPlannedCosts__c</fullName>
        <label>BudgetPlannedCosts</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetPreScreenComments__c</fullName>
        <label>BudgetPreScreenComments</label>
        <length>11768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetPreScreen__c</fullName>
        <label>BudgetPreScreen</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetReviewAndAnalysisComment__c</fullName>
        <label>Budget Review And Analysis Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BusinessDocumentProvidedComments__c</fullName>
        <label>BusinessDocumentProvidedComments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BusinessDocumentsProvided__c</fullName>
        <label>Business Documents Provided?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChairComments__c</fullName>
        <inlineHelpText>Enter comments about modifying the review decision</inlineHelpText>
        <label>Chair Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negotiation Request</label>
        <referenceTo>ChangeRequest__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletionAttachmentComments__c</fullName>
        <label>CompletionAttachmentComments</label>
        <length>11768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CompletionAttachment__c</fullName>
        <label>CompletionAttachment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionPreScreenComments__c</fullName>
        <label>CompletionPreScreenComments</label>
        <length>11768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CompletionPreScreen__c</fullName>
        <label>CompletionPreScreen</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <label>Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non-Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConcurrenceExtReviewDocComments__c</fullName>
        <label>Concurrence Ext Review Doc Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ConcurrenceWithExtReviewComments__c</fullName>
        <label>Concurrence With Ext Review Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ConcurrenceWithExtReview__c</fullName>
        <label>Concurrence with Ext Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConcurrencewithExtReviewDoc__c</fullName>
        <label>Concurrence with Ext Review Doc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConditionsofAwardRecommendedComments__c</fullName>
        <label>Conditions of Award Recommended Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ConditionsofAwardRecommended__c</fullName>
        <label>Conditions of Award are Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, need comment section</fullName>
                </value>
                <value>
                    <fullName>No, do not need comment section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorrectionsComments__c</fullName>
        <description>Corrections:The following sections of your grant must be corrected in order to finalize your grant:</description>
        <label>CorrectionsComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CostPerServiceText__c</fullName>
        <description>Enter the Cost Per Service As Text</description>
        <inlineHelpText>Enter the Cost Per Service As Text</inlineHelpText>
        <label>CostPerServiceText</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostPerService__c</fullName>
        <label>Cost per service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostPerVictim__c</fullName>
        <label>Cost per victim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CriteriaAQuestion3__c</fullName>
        <label>CriteriaAQuestion3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOHRecordComments__c</fullName>
        <label>DOH Record Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DOHRecordsLessThan3yrs__c</fullName>
        <label>DOH Records &lt; 3 yrs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisableDelete__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Assigned&apos;), false,true) || IsPickVal(ReviewAcceptanceStatus__c,&apos;Accepted&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoesProgramPlanIncludeVolunteers__c</fullName>
        <description>Does Program Plan Include Volunteers</description>
        <inlineHelpText>Does Program Plan Include Volunteers (only needed for VOCA)</inlineHelpText>
        <label>DoesProgramPlanIncludeVolunteers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ElegibilityPreScreenComments__c</fullName>
        <label>ElegibilityPreScreenComments</label>
        <length>11768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ElegibilityPreScreen__c</fullName>
        <label>ElegibilityPreScreen</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EligibilityVerifiedComments__c</fullName>
        <label>Eligibility Verified Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EligibilityVerified__c</fullName>
        <label>Eligibility Verified?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludedPartiesSearched__c</fullName>
        <label>Excluded Parties Searched</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Results</fullName>
                </value>
                <value>
                    <fullName>Adverse Result - Ineligible (Proceeding Pending)</fullName>
                </value>
                <value>
                    <fullName>Adverse Result - Ineligible (Proceeding Completed)</fullName>
                </value>
                <value>
                    <fullName>Adverse Result - Prohibition / Restriction</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingOpportunityNumber__c</fullName>
        <label>Funding Opportunity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityTitle__c</fullName>
        <label>Funding Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideAppSubstantiallyCompletedDate__c</fullName>
        <formula>ISBLANK(Application__r.SubstantiallyCompletedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAppSubstantiallyCompletedDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>NOT(OR(AND(ReviewStep__r.StepNumber__c=2,Text(Status__c) != &apos;Review Completed&apos; , $Profile.Name =&apos;SME&apos;), 
AND(ReviewStep__r.StepNumber__c!=2,Text(Status__c) != &apos;Review Completed&apos; , $Profile.Name !=&apos;SME&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfNotCreatedByBudgetUpload__c</fullName>
        <formula>Application__r.HideIfNotCreatedByBudgetUpload__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfNotCreatedByBudgetUpload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideModifyDecision__c</fullName>
        <formula>IF(AND ( $User.Id ==  ReviewPanel__r.Chair__c , TEXT( AcceptanceStatus__c ) == &apos;Accepted&apos;, TEXT( Status__c ) == &apos;Review Completed&apos;), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Modify Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmit__c</fullName>
        <formula>IF(AND ( OR($User.Id == Reviewer__c , AND( NOT(ISBLANK (Owner:Queue.Id)) ,  ReviewPanel__r.Chair__c != $User.Id )) , TEXT( AcceptanceStatus__c ) == &apos;Accepted&apos;, TEXT( Status__c ) != &apos;Review Completed&apos;), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubstantiallyCompletedDate__c</fullName>
        <formula>NOT(ISBLANK(Application__r.SubstantiallyCompletedDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSubstantiallyCompletedDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstructionToReviewers__c</fullName>
        <label>Instructions To Reviewers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAgree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplicationContext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Application Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplication__c</fullName>
        <formula>IF(ReviewPanel__r.RecordType.Name == &apos;Application&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Application(Obsolete)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPreApplicationContext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PreApplication Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPreApplication__c</fullName>
        <formula>IF(ReviewPanel__r.RecordType.Name == &apos;Pre-Application&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Pre-Application(Obsolete)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoginUrl__c</fullName>
        <formula>IF ( Owner:User.IsExternalUser__c,
IF(Owner:User.IsReviewer__c,
$Setup.GNT__GlobalConfig__c.GNT__CommunityURLDomain__c &amp;&apos;/&apos;&amp; $Setup.GNT__GlobalConfig__c.GNT__Namespace__c &amp;&apos;ReviewerLogin&apos;,
$Setup.GNT__GlobalConfig__c.GNT__CommunityURLDomain__c),
$Setup.GNT__GlobalConfig__c.GNT__InternalURLDomain__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MgmtQuestion1__c</fullName>
        <inlineHelpText>Any Conflicts of Interest identified ?</inlineHelpText>
        <label>Any Conflicts of Interest identified ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MgmtQuestion2__c</fullName>
        <label>Does the application map to the Program/</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MgmtQuestion3__c</fullName>
        <label>Applicant has clean history with Agency?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;R-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines the template for the Name field which gets populated automatically by the trigger</inlineHelpText>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfReviews__c</fullName>
        <description>This is copied from PanelApplication to Review in AssignAppsAndNotifyReviewer</description>
        <label>Number of Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfServiceAreasRequested__c</fullName>
        <label>Number Of Service Area Requested</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneStepReviewCompletionStatus__c</fullName>
        <label>OneStepReviewCompletionStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Incomplete</fullName>
                </value>
                <value>
                    <fullName>Application Complete</fullName>
                </value>
                <value>
                    <fullName>Application Rejected</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OverallComments__c</fullName>
        <description>The following are overall comments and positive feedback for your grant:</description>
        <label>OverallComments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OverallsComments__c</fullName>
        <description>Overall: The following are overall comments and positive feedback for your grant:</description>
        <label>OverallsComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerIdFormula__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PanelApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel Application</label>
        <referenceTo>PanelApplication__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PanelUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel User</label>
        <referenceTo>PanelUser__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentBudgetIncreaseFromLastYear__c</fullName>
        <formula>Application__r.TotalDifference__c / Application__r.TotalLastYearAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PercentBudgetIncreaseFromLastYear</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreDecisionSiteVisitRequired__c</fullName>
        <label>Pre-Decision Site Visit Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreDecisionStatus__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notification Sent</fullName>
                </value>
                <value>
                    <fullName>Notification Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreScreeningScore__c</fullName>
        <label>Pre-Screening Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrescreenComments__c</fullName>
        <description>Comments in PreScreen Review Form</description>
        <label>PrescreenComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramArea__c</fullName>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Programs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>Application__r.Announcement__r.Program__r.ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramReqPreScreenComments__c</fullName>
        <label>ProgramReqPreScreenComments</label>
        <length>11232</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProgramReqPreScreen__c</fullName>
        <label>ProgramReqsComply</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionsComments__c</fullName>
        <description>Questions: The following is a list of questions that were raised from the committee. Please provide an explanation to these questions in the space provided and/or attach a separate page. Please implement an changes to your grant if necessary.</description>
        <label>QuestionsComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFCompletedComments__c</fullName>
        <label>RF Completed Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RFCompleted__c</fullName>
        <label>Review Form Completed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatingValue__c</fullName>
        <formula>VALUE(TEXT((Rating__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReadOnlyDecisionRecAmount__c</fullName>
        <formula>OR(
 ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;Fed-Formula&apos;), 
 ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;State-Formula&apos;), 
 ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;Application 1/12th&apos;), 
 ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;Lump-Sum-App&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReadOnlyDecisionRecAmount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecommendationFundStatus__c</fullName>
        <label>RecommendationFundStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fund</fullName>
                </value>
                <value>
                    <fullName>No Fund</fullName>
                </value>
                <value>
                    <fullName>Fund If</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommended</fullName>
                </value>
                <value>
                    <fullName>Not Recommended</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>